// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Chips/Removable Defaults smoke-test 1`] = `
<div data-test-block="true">
  <button type="button"
          class="_removableChip_zdnya_1"
  >
    Trondheim
    <svg class="_systemIcon_1b9cs_2 _systemIcon_small_1b9cs_5 _icon_zdnya_41"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r2:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r2:">
        Fjern filter
      </title>
      <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/Chips/Removable WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button type="button"
          id="htmlId"
          class="_removableChip_zdnya_1  dummyClassname"
          lang="nb"
          data-testid="123ID"
  >
    Trondheim
    <svg class="_systemIcon_1b9cs_2 _systemIcon_small_1b9cs_5 _icon_zdnya_41"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r1:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r1:">
        Fjern filter
      </title>
      <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/Chips/Removable WithCloseIconAltText play-test 1`] = `
<div data-test-block="true">
  <button type="button"
          class="_removableChip_zdnya_1"
  >
    Trondheim
    <svg class="_systemIcon_1b9cs_2 _systemIcon_small_1b9cs_5 _icon_zdnya_41"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r4:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r4:">
        Fjern filter
      </title>
      <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/Chips/Removable WithRef play-test 1`] = `
<div data-test-block="true">
  <button type="button"
          class="_removableChip_zdnya_1"
          id="dummyIdForwardedFromRef"
  >
    Trondheim
    <svg class="_systemIcon_1b9cs_2 _systemIcon_small_1b9cs_5 _icon_zdnya_41"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r0:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r0:">
        Fjern filter
      </title>
      <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/Chips/Removable WithSizeSmall smoke-test 1`] = `
<div data-test-block="true">
  <button type="button"
          class="_removableChip_zdnya_1 _removableChip_small_zdnya_36"
  >
    Trondheim
    <svg class="_systemIcon_1b9cs_2 _systemIcon_small_1b9cs_5 _icon_zdnya_41"
         viewbox="0 0 24 24"
         focusable="false"
         aria-labelledby="svgtitle-:r3:"
         aria-hidden="false"
         role="img"
    >
      <title id="svgtitle-:r3:">
        Fjern filter
      </title>
      <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
      </path>
    </svg>
  </button>
</div>
`;
